--- a/src/ContactUs.css
+++ b/src/ContactUs.css
@@ -3,7 +3,7 @@
     justify-content: center;
     font-family: Arial, sans-serif;
     padding: 20px 50px;
-    margin: auto;
+    margin: 70px auto;
     width: 70%;
     background-color: #ffb8b2;
     gap: 100px;
