--- a/src/landing.css
+++ b/src/landing.css
@@ -6,16 +6,24 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    height: 90vh;
+    min-height: 90vh;
     margin-bottom: 18px;
+}
+
+.landing .intro img {
+    height: 200px;
 }
 
 .landing .intro .heading {
     animation: fadeIn 2s ease-in;
 }
 
-.landing h1 {
+.landing .intro .heading h1 {
     font-size: 56px;
+}
+
+.landing h1 {
+    font-size: 48px;
 }
 
 .landing h2 {
@@ -24,7 +32,7 @@
 }
 
 .landing p {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .testimonials p {
@@ -97,6 +105,8 @@
 .services .service {
     animation: fadeInUp 3s ease-in-out;
     padding: 12px;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 @media (max-width: 1200px) {
@@ -109,12 +119,18 @@
     .services {
         grid-template-columns: repeat(2, 1fr);
     }
+    .landing .intro {
+        flex-direction: column;
+        
+    }
 }
 
 @media (max-width: 600px) {
     .services {
         grid-template-columns: 1fr;
     }
+
+    
 }
 
 @keyframes fadeIn {
