--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,24 @@
   pointer-events: none;
 }
 
+.inputForm {
+  /* flex: 1; */
+  display: flex;
+  flex-direction: column;
+  max-width: 30vw;
+  margin: auto;
+}
+
+.inputForm button {
+  margin-top: 12px;
+}
+
+.error-msg {
+  margin: 0px;
+  color: black;
+  font-style: italic;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
