--- a/src/components/header.css
+++ b/src/components/header.css
@@ -26,6 +26,46 @@
     font-size: 20px;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.profile-icon {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ddd;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-menu a {
+    padding: 12px 16px;
+    text-decoration: none;
+    color: black;
+    display: block;
+}
+
+.dropdown-menu a:hover {
+    background-color: #ddd;
+}  
+
+.profile-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
 .nav {
     margin-right: 12px;
     width: 300px;
