--- a/src/pages/ContactUs.css
+++ b/src/pages/ContactUs.css
@@ -19,13 +19,6 @@
   padding-right: 20px;
 }
 
-.inputForm {
-  /* flex: 1; */
-  display: flex;
-  flex-direction: column;
-  max-width: 30vw;
-}
-
 #name {
   display: flex;
   gap: 10px;
@@ -38,14 +31,15 @@
   border-radius: 10px;
 }
 
-.inputForm input,
-.inputForm textarea {
+.inputForm input, textarea, select {
   margin-bottom: 10px;
   padding: 10px;
   border: 1px solid gainsboro;
   border-radius: 10px;
   width: 100%;
   box-sizing: border-box;
+  background-color: white;
+  color: black;
 }
 
 .inputForm textarea {
